veecle-os-runtime-macros/tests/ui/storable/bad_data_type_string.stderr
error: string literal syntax is not supported, use `data_type = u8` instead
 --> tests/ui/storable/bad_data_type_string.rs:2:24
  |
2 | #[storable(data_type = "u8")]
  |                        ^^^^

error: string literal syntax is not supported, use `data_type = std::string::String` instead
 --> tests/ui/storable/bad_data_type_string.rs:6:24
  |
6 | #[storable(data_type = "std::string::String")]
  |                        ^^^^^^^^^^^^^^^^^^^^^

error: string literal syntax is not supported, use `data_type = Vec<u8>` instead
  --> tests/ui/storable/bad_data_type_string.rs:10:24
   |
10 | #[storable(data_type = "Vec<u8>")]
   |                        ^^^^^^^^^

error: expected a type for `data_type` argument: found extra tokens after type
  --> tests/ui/storable/bad_data_type_string.rs:15:30
   |
15 | #[storable(data_type = foo + 2)]
   |                              ^

error: expected a type for `data_type` argument: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/ui/storable/bad_data_type_string.rs:19:24
   |
19 | #[storable(data_type = 1)]
   |                        ^
